inc/bb_api.h

typedef struct {
    uint8_t auto_band;                                          /**<@note 1=频段自适应，0=频段手动控制*/
    uint8_t target_band;                                        /**<@note 设置的目标band*/
    uint8_t auto_chan;                                          /**<@note 1=信道自适应，0=信道手动控制*/
    uint8_t target_chan;                                        /**<@note 设置的目标信道*/
    uint8_t compliance_mode;                                    /**<@note 1=合规模式，0=自由模式*/
    uint8_t padding[123];                                       /***/
} bb_remote_setting_t;
/**定义设置命令BB_SET_HOT_UPGRADE_WRITE的输出参数结构*/
typedef struct {
    uint16_t seq;                                               /**<@note 命令字序列号，可以任意产生*/
    int16_t ret;                                                /**<@note 命令执行结果，参见bb_errno*/
} bb_set_hot_upgrade_write_out_t;
typedef struct {
    uint8_t auto_mode;                                          /**@note 1=频段自适应，0=频段手动控制*/
} bb_set_band_mode_t;
/**定义设置命令BB_SET_BAND的输入参数结构*/
typedef struct {
    uint8_t target_band;                                        /**<@note 设置的目标band*/
} bb_set_band_t;
typedef struct  {
    uint8_t             slot;                                   /**<@note 目标slot 类型：bb_slot_e*/
    uint8_t             padding[3];
    uint32_t            type_bmp;                               /**<@note 类型bitmap，按类型bb_remote_type_e按顺序取位*/
    bb_remote_setting_t setting;                                /**<@note 设置结构体*/
} bb_set_remote_t;
/**定义设置命令BB_SET_BANDWIDTH的输入参数结构*/
typedef struct {
    uint8_t             slot;                                   /**<@note 预留参数*/
    uint8_t             dir;                                    /**<@note 切换bandwidth的方向 类型：bb_dir_e*/
    uint8_t             bandwidth;                              /**<@note 目标bandwidth 类型：bb_bandwidth_e*/
} bb_set_bandwidth_t;
/**定义设置命令BB_SET_POWER_SAVE_MODE_MODE的输入参数结构*/
typedef struct {
    int8_t              mode;                                   /**<@note 节能模式     0=手动 1=自动*/
} bb_set_power_save_mode_t;
/**定义设置命令BB_SET_POWER_SAVE_MODE的输入参数结构*/
typedef struct {
    uint8_t             period;                                 /**<@note 节能发送周期*/
} bb_set_power_save_t;
/**BB_SET_DFS*/
typedef struct {
    int16_t pwr_min;                                            /**<@note 扫频分级能量起始值*/
    int16_t pwr_max;                                            /**<@note 扫频分级能量结束值*/
    uint8_t gain;                                               /**<@note dfs检测参数gain*/
    uint8_t detected_mask;                                      /**<@note detected类型掩码*/
    uint8_t dynamic;                                            /**<@note dynamic gain*/
} bb_dfs_polic_t;
typedef enum {
    BB_DFS_POLIC_LEVEL0,                                        /**<@note 工作环境策略等级*/
    BB_DFS_POLIC_LEVEL1,
    BB_DFS_POLIC_LEVEL2,
    BB_DFS_POLIC_LEVEL3,
    BB_DFS_POLIC_LAB,                                           /**<@note 实验室环境策略*/
    BB_DFS_POLIC_MAX
} bb_dfs_polic_e;
typedef struct {
    uint8_t mode:4;                                             /**<@note 0-disable dfs frame, 1-enable dfs frame, 开启或关闭dfs帧*/
    uint8_t ctrl:4;                                             /**<@note 0-manu, 1-auto*/
    uint8_t chan;                                               /**<@note 指定检测的chan*/
    uint8_t type:4;                                             /**<@note 认证类型bb_dfs_type_e*/
    uint16_t clear_expir;                                       /**<@note 定时清理dfs寄存器，单位ms*/
    uint8_t gain_db_in;                                         /**<@note dfs 参数*/
    int8_t actual_rx_power_in;                                  /**<@note dfs 参数*/
    uint16_t freq_offset;                                       /**<@note dfs 接收频偏, 单位khz*/

#if 0
    uint8_t lab_chan_count;                                     /**<@note 实验室环境大于噪声频道数量阈值*/
    uint16_t lcc_expir;                                         /**<@note 实验室环境大于噪声频道数量阈值有效窗口*/
    int16_t noise;                                              /**<@note 扫频环境噪声阈值*/
    uint16_t pwr_expir;                                         /**<@note 扫描能量值有效窗口*/
    bb_dfs_polic_t polics[BB_DFS_POLIC_MAX];                    /**<@note 扫频分级检测参数*/
#endif
} bb_conf_dfs_t;
typedef struct {
    uint32_t mode:1;
    uint32_t ctrl:1;
    uint32_t chan:1;
    uint32_t type:1;
    uint32_t clear_expir:1;
    uint32_t gain_db_in:1;
    uint32_t actual_rx_power_in:1;
    uint32_t freq_offset:1;

#if 0
    uint32_t lab_cc:1;
    uint32_t lcc_expir:1;
    uint32_t noise:1;
    uint32_t pwr_expir:1;
    uint32_t polic:1;
#endif
} bb_conf_dfs_mask_t;
typedef struct {
    uint32_t chan:8;
    uint32_t event:4;                                            /**<@note dfs动作：0-stop, 1-start*/
} bb_dfs_act_t;
typedef struct {
    uint32_t sub_cmd:8;
    union {
        struct {
            bb_conf_dfs_t conf;
            bb_conf_dfs_mask_t mask;
        };
        bb_dfs_act_t act;
    } u;
} bb_set_dfs_t;
typedef struct {
    int slot;
    int port;
} QUERY_TX_IN;
typedef struct {
    uint64_t buff_index;
    int32_t  buff_len;
    int32_t  buff_avail;
} QUERY_TX_OUT;
typedef struct {
    int32_t buff_len;
} QUERY_RX_OUT;
typedef struct {
    int32_t buff_len;
} BUFF_LIMIT;
/**定义配对结果异步事件结构体*/
typedef struct {
    int32_t ret;                                               /**<@note 调用结果*/
} bb_event_pair_result_t;
/**定义设置命令BB_SET_HOT_UPGRADE_CRC32的输出参数结构*/

typedef bb_set_hot_upgrade_write_out_t bb_set_hot_upgrade_crc32_out_t; /**<@note 复用结构*/